# pyfbow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_fbow.sh  files.txt  setup.py
src/: fbow_wrapper.cpp
tests/: create_voc.py  test_voc.py
